peac_dev/force-app/main/default/objects/Dealer_Repurchase_Settings__c/Dealer_Repurchase_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Dealer_Repurchase_Settings</label>
</CustomObject>