peac_dev/force-app/main/default/objects/Dealer_Repurchase_Settings__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>