peac_dev/force-app/main/default/objects/Dealer_Repurchase_Settings__c/fields/Docgen_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>Docgen_Package_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Docgen Package Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>